# speciesnet-rust

./: .env.example  Cargo.toml  README.md
.github/: cd.yaml  dependabot.yml  documentation.yaml
.github/workflows/: cd.yaml  documentation.yaml
assets/: .gitignore  geofence_fixes.csv  geofence_fixes_test.csv  taxonomy_release.txt
assets/images/: compare.py  input.json  output_classifier.json  output_detector.json  output_ensemble.json
assets/model/: info.txt  labels.txt
classifier/: Cargo.toml
classifier/src/: classifier.rs  constants.rs  error.rs  geofence.rs  image.rs  input.rs  lib.rs
classifier/src/classifier/: tests.rs
classifier/src/geofence/: taxonomy.rs  tests.rs
classifier/src/geofence/taxonomy/: tests.rs
classifier/tests/: integration_tests.rs
converter/: README.md
converter/mega-detector-to-onnx/: Dockerfile
converter/speciesnet-to-onnx/: Dockerfile  convert_onnx.py
core/: Cargo.toml
core/src/: bounding_box.rs  category.rs  classification.rs  constants.rs  detection.rs  error.rs  geofence.rs  image_reader.rs  instance.rs  letterbox.rs  lib.rs  macros.rs  prediction.rs  predictions.rs  shape.rs
core/src/classifier/: classification.rs  mod.rs
core/src/detector/: bounding_box.rs  category.rs  detection.rs  mod.rs
core/src/ensemble/: geofence.rs  mod.rs
core/src/io/: instance.rs  mod.rs  prediction.rs
core/src/model_info/: download_model.rs  mod.rs
detector/: Cargo.toml
detector-ort/: Cargo.toml
detector-ort/src/: error.rs  main.rs  preprocess.rs  yolo.rs
detector/src/: error.rs  lib.rs  preprocess.rs  torchvision.rs  yolo.rs
ensemble/: Cargo.toml
ensemble/src/: error.rs  geofence.rs  input.rs  lib.rs
ensemble/src/geofence/: taxonomy.rs  tests.rs
ensemble/src/geofence/taxonomy/: tests.rs
examples/detect/: Cargo.toml
examples/detect/src/: main.rs
examples/image_load/: Cargo.toml  s49_c68_to_json.py
examples/image_load/src/: main.rs
python/: Dockerfile  README.md  mega-detector-trace-model.py  pyproject.toml
speciesnet/: Cargo.toml
speciesnet-cli/: Cargo.toml  README.md
speciesnet-cli/src/: file_extension.rs  inputs.rs  main.rs
speciesnet/src/: error.rs  io.rs  lib.rs  main.rs  speciesnet.rs
speciesnet/src/model_info/: download_model.rs  mod.rs
src/: classifier.rs  constants.rs  geofence.rs  image.rs  lib.rs
src/classifier/: tests.rs
src/geofence/: geofence.rs  taxonomy.rs  tests.rs
src/geofence/taxonomy/: tests.rs
