[package]
name = "speciesnet-classifier"
version = "0.1.0"
edition = "2024"

[lib]
name = "speciesnet_classifier"
path = "src/lib.rs"

[dependencies]
tensorflow = { git = "https:github.com/tensorflow/rust", rev = "1ddf5a3" }
image = "0.25"
thiserror = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1"
speciesnet-core = { path = "../core" }
fast_image_resize = "5"
