[package]
name = "speciesnet-classifier"
version = "0.1.0"
edition = "2024"

[lib]
name = "speciesnet_classifier"
path = "src/lib.rs"

[dependencies]
ort = { version = "=2.0.0-rc.9", features = ["ndarray"] }
image = "0.24"
ndarray = "0.16"
num_cpus = "1"
thiserror = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1"
speciesnet-core = { path = "../core" }
fast_image_resize = "5"
