[package]
name = "speciesnet-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["download-model"]
download-model = ["dep:zip", "dep:ureq", "dep:directories"]

[dependencies]
image = "0.25"
directories = { version = "6", optional = true }
mozjpeg = "0.10"
ndarray = "0.16"
ureq = { version = "3", optional = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16", features = ["v4"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
zip = { version = "2.6", optional = true }
