[package]
name = "speciesnet-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["download-model"]
download-model = ["dep:zip", "dep:ureq", "dep:directories"]

[dependencies]
directories = { version = "6", optional = true }
image = "0.25"
mozjpeg = "0.10"
ndarray = "0.16"
nom = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
ureq = { version = "3", optional = true }
uuid = { version = "1.16", features = ["v4"] }
zip = { version = "2.6", optional = true }
