[package]
name = "speciesnet-core"
version = "0.1.0" # Please bump this when doing a release.
authors = [
  "Bhattarapong Somwong <art@zubalis.com>",
  "Antony Harfield <antony@zubalis.com>",
  "Wasuphon Naksut <frongs@zubalis.com>",
]
description = "Core types and traits for speciesnet."
repository = "https://github.com/zubalis/speciesnet-rust"
homepage = "https://github.com/zubalis/speciesnet-rust"
license = "APACHE"
edition = "2024"

[dependencies]
image = "0.25"
mozjpeg = "0.10"
ndarray = "0.16"
nom = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1.16", features = ["v4"] }
