[package]
name = "speciesnet-detector"
version = "0.1.0"
edition = "2024"

[lib]
name = "speciesnet_detector"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.6"
image = "0.25.5"
log = "0.4.26"
ndarray = "0.16.1"
tch = { version = "0.19.0", features = ["image"] }
thiserror = "2"
speciesnet-core = { path = "../core" }
rayon = "1.10.0"
