[package]
name = "speciesnet-detector"
version = "0.1.0" # Please bump this when doing a release.
authors = [
  "Bhattarapong Somwong <art@zubalis.com>",
  "Antony Harfield <antony@zubalis.com>",
  "Wasuphon Naksut <frongs@zubalis.com>",
]
description = "Detector components of speciesnet"
repository = "https://github.com/zubalis/speciesnet-rust"
homepage = "https://github.com/zubalis/speciesnet-rust"
license = "APACHE"
edition = "2024"

[dependencies]
image = "0.25"
ndarray = "0.16"
num_cpus = "1"
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["ndarray", "copy-dylibs"] }
speciesnet-core = { path = "../core" }
thiserror = "2.0"
tracing = "0.1"
