[package]
name = "speciesnet-ensemble"
version = "0.1.0" # Please bump this when doing a release
authors = [
  "Bhattarapong Somwong <art@zubalis.com>",
  "Antony Harfield <antony@zubalis.com>",
  "Wasuphon Naksut <frongs@zubalis.com>",
]
description = "Ensemble components of speciesnet"
repository = "https://github.com/zubalis/speciesnet-rust"
homepage = "https://github.com/zubalis/speciesnet-rust"
license = "APACHE"
edition = "2024"

[lib]
name = "speciesnet_ensemble"
path = "src/lib.rs"

[dependencies]
csv = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
speciesnet-core = { path = "../core" }
thiserror = "2.0"
tracing = "0.1"
