[project]
name = "speciesnet-python-helper"
version = "0.1.0"
description = "Module for dealing with model conversions from Rust to python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow==2.18.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "yolov5>=7.0.14",
]
