[package]
name = "speciesnet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ort = { version = "=2.0.0-rc.9", features = ["ndarray", "download-binaries"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
speciesnet-core = { path = "../core" }
speciesnet = { path = "../speciesnet" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
walkdir = "2.5"
