[package]
name = "speciesnet"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
num_cpus = "1"
rayon = "1"
speciesnet-core = { path = "../core" }
speciesnet-detector = { path = "../detector" }
speciesnet-classifier = { path = "../classifier" }
speciesnet-ensemble = { path = "../ensemble" }
thiserror = "2"
tracing = "0.1"
