[package]
name = "speciesnet"
version = "0.1.0"
edition = "2024"

[features]
default = ["download-model"]
download-model = ["dep:serde", "dep:serde_json", "dep:ureq", "dep:directories", "dep:zip"]

[dependencies]
directories = { version = "6", optional = true }
image = "0.25"
num_cpus = "1"
rayon = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
speciesnet-core = { path = "../core" }
speciesnet-detector = { path = "../detector" }
speciesnet-classifier = { path = "../classifier" }
speciesnet-ensemble = { path = "../ensemble" }
thiserror = "2"
tracing = "0.1"
ureq = { version = "3", optional = true }
zip = { version = "2.6", optional = true }
