[package]
name = "speciesnet"
version = "0.1.0" # Please bump this when doing a release
authors = [
  "Bhattarapong Somwong <art@zubalis.com>",
  "Antony Harfield <antony@zubalis.com>",
  "Wasuphon Naksut <frongs@zubalis.com>",
]
description = "Home of the ported google's cameratrapai for Rust."
repository = "https://github.com/zubalis/speciesnet-rust"
homepage = "https://github.com/zubalis/speciesnet-rust"
license = "APACHE"
edition = "2024"
readme = "../README.md"

[features]
default = ["download-model"]
download-model = ["dep:serde", "dep:serde_json", "dep:ureq", "dep:directories", "dep:zip"]

[dependencies]
directories = { version = "6", optional = true }
image = "0.25"
num_cpus = "1"
rayon = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
speciesnet-core = { path = "../core" }
speciesnet-detector = { path = "../detector" }
speciesnet-classifier = { path = "../classifier" }
speciesnet-ensemble = { path = "../ensemble" }
thiserror = "2"
tracing = "0.1"
ureq = { version = "3", optional = true }
zip = { version = "3.0", optional = true }
