[package]
name = "detect"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ab_glyph = "0.2"
anyhow = "1"
env_logger = "0.11"
image = "0.25"
imageproc = "0.25"
speciesnet = { path = "../../speciesnet" }
speciesnet-core = { path = "../../core" }
speciesnet-detector = { path = "../../detector" }
