[package]
name = "detect"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
font-kit = "0.14"
image = "0.25"
raqote = { version = "0.8", default-features = false, features = ["text"] }
show-image = { version = "=0.14.0", features = ["image", "raqote"] }
speciesnet = { path = "../../speciesnet" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
